--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
-group 'com.github.jacklt'
+group 'com.github.omarmiatello'
 version '1.0-SNAPSHOT'
 
 repositories {
